# eval_tool

./: .gitignore  README.md  all_models_data.csv  llmjudge_eval.py  main.py  pyproject.toml  run_matrix.py
config/: Compare_template.yaml  Creative_template.yaml  Judge_template.yaml  Knowledge_template.yaml  Reason_template.yaml  Summary_template.yaml  Translate_template.yaml  criteria_result_guide.yaml  eval_prompt1.yaml  minutes_prompt.yaml
evalsllm/: __init__.py  core.py  llm_interfaces.py
matrix/: EDA.ipynb  matrix copy.py  matrix.ipynb  matrix.py
metrics/: __init__.py  metrics.py
prompt/: __init__.py
utils/: eda.py  logger.py  parser.py
wheelhouse/: mmo_lr_utils-1.0.3-py3-none-any.whl
