[project]
name = "eval-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastparquet>=2024.11.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.5",
    "mmo-lr-utils",
    "numpy>=1.26.4",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "pyyaml>=6.0.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "streamlit>=1.29.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_judge*", "eval*", "evalsllm*", "prompt*", "response*", "utils*", "matrix*", "metrics*"]

[tool.uv.sources]
mmo-lr-utils = { path = "wheelhouse/mmo_lr_utils-1.0.3-py3-none-any.whl" }

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipykernel>=6.30.1",
]
